--- a/gb/23/7/3/n14027264.md
+++ b/gb/23/7/3/n14027264.md
@@ -1,71 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>桃园智慧农耕园 农业转型最高补助百万</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14027267-622366-600x400.jpg" />
 <h6>张善政也实际操作智慧农业远端智慧监控、灌溉系统。（桃园市农业局提供）
 </h6>
 <hr>
-<p>【大纪元2023年07月03日讯】（大纪元记者徐乃义台湾<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>报导）为解决农业季节性缺工、农损、工时特殊以及农业机具操作等问题，桃园市政府率先全台，辅导<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%9D%92%E5%86%9C.md#1">青农</a>成立“桃园智慧农耕团”，由具<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%99%BA%E6%85%A7%E5%8C%96.md#1">智慧化</a>技术之青农协助农民耕作；并同步推动“智慧青农示范场域补助计划”，针对“智慧感控系统”“智慧环控系统”“智慧生产”和“智慧服务”等四大项目补助，最高补助达100万元！</p>
-<figure id="14027265" aria-describedby="caption-14027265" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14027265-622364-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/07/id14027265-622364-450x253.jpg" alt="桃园智慧农耕园。" width="500" /></a><figcaption id="caption-14027265" class="wp-caption-text"><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>智慧农耕园。（桃园市农业局提供）</figcaption></figure>
+<p>【大纪元2023年07月03日讯】（大纪元记者徐乃义台湾桃园报导）为解决农业季节性缺工、农损、工时特殊以及农业机具操作等问题，桃园市政府率先全台，辅导青农成立“桃园智慧农耕团”，由具智慧化技术之青农协助农民耕作；并同步推动“智慧青农示范场域补助计划”，针对“智慧感控系统”“智慧环控系统”“智慧生产”和“智慧服务”等四大项目补助，最高补助达100万元！</p>
+<figure id="14027265" aria-describedby="caption-14027265" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14027265-622364-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/07/id14027265-622364-450x253.jpg" alt="桃园智慧农耕园。" width="500" /></a><figcaption id="caption-14027265" class="wp-caption-text">桃园智慧农耕园。（桃园市农业局提供）</figcaption></figure>
 <p>桃园市长张善政3日出席“桃园智慧农耕团誓师大会”，授旗予智慧农耕团大队长廖俊融，象征桃园智慧农耕团正式成军！</p>
-<figure id="14027266" aria-describedby="caption-14027266" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14027266-622365-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/07/id14027266-622365-450x253.jpg" alt="桃园市长张善政3日出席“桃园智慧农耕团誓师大会”。" width="500" /></a><figcaption id="caption-14027266" class="wp-caption-text">桃园市长张善政3日出席“桃园智慧农耕团誓师大会”。（桃园市农业局提供）</figcaption></figure>
-<p>桃园<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%9D%92%E5%86%9C.md#1">青农</a>一直勇于改变，在农委会与桃园市政府共同辅导下，成立了机械工班，导入新型省工农机，陆续从茶叶、杂粮、特作的机械代耕，到果树碎枝、小型农机租赁平台等。“桃园智慧农耕团”由四个中队组成，在机械工班原有的基础上扩充为“机械中队”，并新增“智农中队”“食农中队”及“净零循环中队”。</p>
-<figure id="14027268" aria-describedby="caption-14027268" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14027268-622367-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/07/id14027268-622367-450x253.jpg" alt="桃园市长张善政也感受收获之乐。" width="500" /></a><figcaption id="caption-14027268" class="wp-caption-text">桃园市长张善政也感受收获之乐。（桃园市农业局提供）</figcaption></figure>
+<figure id="14027266" aria-describedby="caption-14027266" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14027266-622365-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/07/id14027266-622365-450x253.jpg" alt="桃园市长张善政3日出席“桃园智慧农耕团誓师大会”。" width="500" /></a><figcaption id="caption-14027266" class="wp-caption-text">桃园市长张善政3日出席“桃园智慧农耕团誓师大会”。（桃园市农业局提供）</figcaption></figure>
+<p>桃园青农一直勇于改变，在农委会与桃园市政府共同辅导下，成立了机械工班，导入新型省工农机，陆续从茶叶、杂粮、特作的机械代耕，到果树碎枝、小型农机租赁平台等。“桃园智慧农耕团”由四个中队组成，在机械工班原有的基础上扩充为“机械中队”，并新增“智农中队”“食农中队”及“净零循环中队”。</p>
+<figure id="14027268" aria-describedby="caption-14027268" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14027268-622367-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/07/id14027268-622367-450x253.jpg" alt="桃园市长张善政也感受收获之乐。" width="500" /></a><figcaption id="caption-14027268" class="wp-caption-text">桃园市长张善政也感受收获之乐。（桃园市农业局提供）</figcaption></figure>
 <p>“桃园智慧农耕团”最大创新为“智农中队”，该中队成员均在其耕作农地导入智农规划、农事精准管理、数据整合应用、智慧生产作业设施等智慧农业相关解决方案。未来亦会发展精准气候预警、智能灌溉、智慧排程及派遣、精准农业、进销存系统数据分析等。而“机械中队”包含特作小队、杂粮小队、碎枝机小队，并新增“无人机小队”，可让施肥、喷药作业更为精准；同时亦导入人力及农机资源盘点，农闲人力互助、机具共享，劳安讲习教育训练，使智慧农耕团耕作不仅更有效率，安全性亦大幅提升。</p>
-<figure id="14027269" aria-describedby="caption-14027269" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14027269-622368-450x181.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/07/id14027269-622368-450x181.jpg" alt="无人机喷药的运作示范，了解智慧农业如何协助茶农生产转型，提高茶叶采收效益。" width="500" /></a><figcaption id="caption-14027269" class="wp-caption-text">无人机喷药的运作示范，了解智慧农业如何协助茶农生产转型，提高茶叶采收效益。（桃园市农业局提供）</figcaption></figure>
+<figure id="14027269" aria-describedby="caption-14027269" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14027269-622368-450x181.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/07/id14027269-622368-450x181.jpg" alt="无人机喷药的运作示范，了解智慧农业如何协助茶农生产转型，提高茶叶采收效益。" width="500" /></a><figcaption id="caption-14027269" class="wp-caption-text">无人机喷药的运作示范，了解智慧农业如何协助茶农生产转型，提高茶叶采收效益。（桃园市农业局提供）</figcaption></figure>
 <p>桃园市农业局长陈冠义表示，桃园智慧农耕团成立后，会应用智慧农业技术在桃园各项农特产中，包括水稻、蔬菜、杂粮、花卉以及特用作物，目前已有50位以上团员，未来由农耕团弹性调度，满足桃园市农民代耕需求，解决缺工问题，同时透过专业系统化训练，使参与农友熟悉农机操作和作物栽培技术，特别是运用智慧管理，将有效提高农友收入和品质。</p>
-<figure id="14027270" aria-describedby="caption-14027270" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14027270-622370-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/07/id14027270-622370-450x253.jpg" alt="桃园市长张善政等期望透过桃园智慧农耕团及桃园市政府智慧农业推动小组的全力辅导下，有效加速农业生产转型、扩大农业产值。" width="500" /></a><figcaption id="caption-14027270" class="wp-caption-text">桃园市长张善政等期望透过桃园智慧农耕团及桃园市政府智慧农业推动小组的全力辅导下，有效加速农业生产转型、扩大农业产值。（桃园市农业局提供）</figcaption></figure>
-<p>桃园市政府副秘书长金志聿表示，目前智慧农业蔚为潮流，但桃园农作面积广大，短时间难以全面导入智慧农业。桃园将已导入智慧农业的青农组成“智农中队”，将他们透过<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%99%BA%E6%85%A7%E5%8C%96.md#1">智慧化</a>系统所获得的种植数据及农法，藉由“机械中队”的代耕业务扩散至全桃园，让没有导入智慧化系统的农友们也能同享其利，是最快能够看到智慧农业效果的运作机制。</p>
+<figure id="14027270" aria-describedby="caption-14027270" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/07/id14027270-622370-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/07/id14027270-622370-450x253.jpg" alt="桃园市长张善政等期望透过桃园智慧农耕团及桃园市政府智慧农业推动小组的全力辅导下，有效加速农业生产转型、扩大农业产值。" width="500" /></a><figcaption id="caption-14027270" class="wp-caption-text">桃园市长张善政等期望透过桃园智慧农耕团及桃园市政府智慧农业推动小组的全力辅导下，有效加速农业生产转型、扩大农业产值。（桃园市农业局提供）</figcaption></figure>
+<p>桃园市政府副秘书长金志聿表示，目前智慧农业蔚为潮流，但桃园农作面积广大，短时间难以全面导入智慧农业。桃园将已导入智慧农业的青农组成“智农中队”，将他们透过智慧化系统所获得的种植数据及农法，藉由“机械中队”的代耕业务扩散至全桃园，让没有导入智慧化系统的农友们也能同享其利，是最快能够看到智慧农业效果的运作机制。</p>
 <p>张善政也实际操作智慧农业远端智慧监控、灌溉系统，该系统除了能搜集各项环境数据，包含温度、湿度、土壤含水量及土壤肥力等，亦可随时查看田间作物生长，也能预约或即时执行灌溉功能。现场张善政市长也视察了采茶机、无人机喷药的运作示范，了解智慧农业如何协助茶农生产转型，提高茶叶采收效益。</p>
 <p>桃园市政府除了成立“桃园智慧农耕团”，也同步推动“智慧青农示范场域补助计划”，针对“智慧感控系统”“智慧环控系统”“智慧生产”和“智慧服务”等四大项目，补助额度为建置经费的三分之二，补助上限为新台币50万元，倘面积超过1公顷且为重点发展产业，还加码提高补助，最高补助上限100万元！桃园市政府积极辅导在地农友，期望透过桃园智慧农耕团及桃园市政府智慧农业推动小组的全力辅导下，有效加速农业生产转型、扩大农业产值。◇</p>
 <p>责任编辑：昌英</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/11/4/n13352715.md#1">彰青创意竞赛出炉 张智闵拔得头筹获百万资金</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/16/n13826283.md#1">青农变网红  彰农学堂培育青农有成</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922069.md#1">彰化县庆祝农民节 表扬百位杰出农友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/21/n13954949.md#1">8万株海芋  “2023桃园彩色海芋季”4/1-4/16在大园</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955697.md#1">张善政上任88天落实政策 法务局长遭请出议场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/23/n14002577.md#1">推动、研发台茶产业 茶改场走过两甲子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027271.md#1">复旦分队增添救护车 提升平镇地区新战力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027240.md#1">2023桃园天文嘉年华活动开跑 七天活动不断</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027217.md#1">长庚大学北美医学预科开课 台湾新生随班附读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027184.md#1">桃市府422名大专学生暑期工读</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/11/4/n13352715.md#1">彰青创意竞赛出炉 张智闵拔得头筹获百万资金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/16/n13826283.md#1">青农变网红  彰农学堂培育青农有成</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/4/n13922069.md#1">彰化县庆祝农民节 表扬百位杰出农友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/21/n13954949.md#1">8万株海芋  “2023桃园彩色海芋季”4/1-4/16在大园</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/22/n13955697.md#1">张善政上任88天落实政策 法务局长遭请出议场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/23/n14002577.md#1">推动、研发台茶产业 茶改场走过两甲子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307972.md#1">桃园2024年东方美人茶评鉴颁奖 辅导茶农智慧农耕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307961.md#1">桃捷A12站游客中心启用 提升桃园国际观光市场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307949.md#1">长庚科大获一金三银肯定 蝉联台湾永续行动奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307944.md#1">宝二水库加高完成水位蓄升 水库容量增加210万吨</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/27/n10093465.md#1" target="_blank">林辉：江青法庭辩护词透露的真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/2/n11494502.md#1" target="_blank">探寻东方养生道 希腊青年在修炼中得到升华</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/23/n11275879.md#1" target="_blank">林辉：中共对三千印度战俘进行红色洗脑</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11489263.md#1" target="_blank">伦敦盛大游行 34国法轮功学员吁停止迫害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/29/n14024670.md#1">父亲称被外星人绑架 美国男子从取笑到相信</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/26/n14022984.md#1">【未解之谜】孙储琳──90年代特异功能大师（下）意念的“威力”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/26/n14022994.md#1">爱尔兰女子10年前做梦 预知泰坦号事故？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/23/n14021395.md#1">【天道有知】善恶报应何时报 神佛皆有安排</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/27/n14023428.md#1">过了夏至 长夏到 如何养心又养脾胃？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/1/n14026333.md#1">【拍案惊奇】“光刻机”卡中共 C919又出故障？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/1/n14026430.md#1">【探索时分】瑞典援乌鹰狮 鹰狮曾大胜苏-27</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/1/n14026427.md#1">【新闻五人行】防兵变？中共密集出台“毒法”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025979.md#1">更多ASML光刻机被限出口 打击中共野心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025960.md#1">陆男星蔡徐坤被爆性丑闻 《奔跑吧》受累停播</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/1/n14026188.md#1">专家：七一重提苏共垮台 习近平忧重蹈覆辙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025677.md#1">詹雅雯高铁站遭撞飞伤到肋骨 痛得当场大哭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025960.md#1">陆男星蔡徐坤被爆性丑闻 《奔跑吧》受累停播</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025897.md#1">郑秀文新冠后遗症未愈 13场红馆演唱会延期</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025910.md#1">89岁艾伦?阿金辞世 曾与赫本合作主演电影</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025373.md#1">曾遭原子弹轰炸 日本尚未确定上映《奥本海默》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/29/n14025207.md#1">母亲去年在大陆染疫亡 美华人仍难摆脱阴影</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/1/n14026026.md#1">植牙机器人问世 如何选择植牙医生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025380.md#1">做梦大喊大叫、拳打脚踢 常做噩梦警惕4种严重疾病</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/1/n14026114.md#1">人们离开加州的根本原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/30/n14025612.md#1">搭机如何克服时差？ 吃巧克力可能是关键</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302520.md#1">【古道人生】康熙年间关帝显灵 大败贼寇的真实记载</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306767.md#1">【晚间新闻】大陆网民热议孟加拉政变 中共忙封号</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306935.md#1">【新闻欣视角】新冠病毒警报再响 两变异株来势汹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/3/n14027264.htm">桃园智慧农耕园 农业转型最高补助百万</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027264.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/3/n14027264.htm">桃园智慧农耕园 农业转型最高补助百万</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/7/3/n14027264.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
